--- a/TP03MainProj/Views/Education/DiverseCultures.cshtml
+++ b/TP03MainProj/Views/Education/DiverseCultures.cshtml
@@ -5,7 +5,7 @@
 }
 
 @*choose part*@
-<section class="">
+<section class="mt-4">
     <div class="container justify-content-center align-content-center">
         <div class="row">
             <div class="col-lg-8">
@@ -22,35 +22,35 @@
         <div class="row">
             <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-sm-20">
                 <div class="bg-color-2 rounded-30 mb20 bg-warning choose-item" data-target="china">
-                    <img src="@Url.Content("~/Content/Customer/images/team/Chinese.jpg")" class="img-fluid" alt="">
+                    <img src="@Url.Content("~/Content/Customer/images/team/Chinese.jpg")" class="img-fluid edu-img" alt="" style="height: 150px; width: auto;">
                 </div>
                 <h4 class="mb-0">China</h4>
             </div>
 
             <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-sm-20">
                 <div class="bg-color-2 rounded-30 mb20 bg-warning choose-item" data-target="japan">
-                    <img src="@Url.Content("~/Content/Customer/images/team/Japanese.jpg")" class="img-fluid" alt="">
+                    <img src="@Url.Content("~/Content/Customer/images/team/Japanese.png")" class="img-fluid edu-img" alt="" style="height: 150px; width: auto;">
                 </div>
                 <h4 class="mb-0">Japan</h4>
             </div>
 
             <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-sm-20">
                 <div class="bg-color-2 rounded-30 mb20 bg-warning choose-item" data-target="korea">
-                    <img src="@Url.Content("~/Content/Customer/images/team/Korean.jpg")" class="img-fluid" alt="">
+                    <img src="@Url.Content("~/Content/Customer/images/team/Korean.png")" class="img-fluid edu-img" alt="" style="height: 150px; width: auto;">
                 </div>
                 <h4 class="mb-0">Korea</h4>
             </div>
 
             <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-sm-20">
                 <div class="bg-color-2 rounded-30 mb20 bg-warning choose-item" data-target="philipines">
-                    <img src="@Url.Content("~/Content/Customer/images/team/Filipino.jpg")" class="img-fluid" alt="">
+                    <img src="@Url.Content("~/Content/Customer/images/team/Filipino.jpg")" class="img-fluid edu-img" alt="" style="height: 150px; width: auto;">
                 </div>
                 <h4 class="mb-0">Philippines</h4>
             </div>
 
             <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-sm-20">
                 <div class="bg-color-2 rounded-30 mb20 bg-warning choose-item" data-target="vietnam">
-                    <img src="@Url.Content("~/Content/Customer/images/team/Vietnamese.jpg")" class="img-fluid" alt="">
+                    <img src="@Url.Content("~/Content/Customer/images/team/Vietnamese.jpg")" class="img-fluid edu-img" alt="" style="height: 150px; width: auto;">
                 </div>
                 <h4 class="mb-0">Vietnam</h4>
             </div>
@@ -115,7 +115,11 @@
 
 
     <style>
-
+        .edu-img {
+            height: 150px; /* Fixed height for all images */
+            width: auto; /* Maintain aspect ratio */
+            object-fit: cover; /* Cover the frame fully, might crop some parts */
+        }
         .choose-item.highlight {
             border: 2px solid #FECE58;
             box-shadow: 0 0 20px 5px #FECE58;
