--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -10,7 +10,7 @@
 
 <section>
     <div class="container-fluid">
-        <div class="row justify-content-center text-center section-row">
+        <div class="row justify-content-center text-center section-row m-4 ">
             <div class="col">
                 @{
                     var cultureColour = "";
@@ -42,10 +42,10 @@
             </div>
 
         </div>
-        <div class="row row-cols-3 justify-content-center m-auto section-row bg-grey border-2  border-bottom" id="button-section">
+        <div class="row row-cols-3 justify-content-center m-auto section-row bg-grey border-2 p-2 mt-2 mb-3  border-bottom" id="button-section">
             <div class="col "></div>
             <div class="col text-center">
-                <a class="btn culture-btn btn-primary  w-25" href="">Events</a>
+                <a class="btn culture-btn btn-primary w-25" href="">Events</a>
                 <a class="btn culture-btn btn-primary w-25" href="">Quiz</a>
                 <a class="btn culture-btn btn-primary w-25" href="">Attraction</a>
             </div>
@@ -53,7 +53,7 @@
         </div>
 
 
-        <div class="row justify-content-center section-row">
+        <div class="row justify-content-center section-row mt-5">
             <div class="col-4">
 
                 <div id="calendar" class="mx-auto"></div>
@@ -74,41 +74,21 @@
         </div>
         <!-- quiz-->
         <!-- Please add and adjust the CSS according to page (but please keep the messages same as the ones below)-->
-        <div class="row justify-content-center m-auto section-row bg-warning">
-            <div class="row mb-3">
-                <h1>Common Phrases and Cultural Etiquette Quiz</h1>
-            </div>
-            <div class = "row">
-                <div class="col-lg-8 col-md-10 text-center">
-                    <h4 id="startMessage">"Want to learn about this culture in depth? Try this quiz!"</h4>
-                    <button id="loadQuiz" class="btn btn-primary">Learn About @ViewBag.Culture</button>
-                    <p id="startMessage">Click the button to start the quiz!</p>
-                    <div id="quizFrame" style="display:none;"></div> <!-- Placeholder for the iFrame -->
+        <div class="row justify-content-center section-row bg-warning pt-5 mt-5">
+            <div class="col-lg-8 col-md-10 text-center">
+                <div class="row mb-3">
+                    <h1  style="word-spacing: 8px;">Common Phrases and Cultural Etiquette Quiz</h1>
                 </div>
-            </div>
+                <div class="row justify-content-center">
+                    <h4 id="startMessage">"Want to learn about this culture in depth? Try this quiz!"</h4>
+
+                    <button id="loadQuiz" class="btn btn-primary culture-btn w-25">Learn About @ViewBag.Culture  </button>
+                    <p id="startMessage">Click the button to start the quiz!</p>
+                </div>
+                <div id="quizFrame" style="display:none;"></div> <!-- Placeholder for the iFrame if needed -->
             </div>
         </div>
-        <!--
-    <div class="row justify-content-center m-auto section-row bg-warning">
-        <div class="row mb-3">
-            <h1>Common Phrases and Cultural Etiquette Quiz</h1>
-        </div>
-        <div class="row">
-            <div class="col"></div>
-            <div class="col-6">
-                <div class="row mb-lg-5">
-                    @Html.Partial("~/Views/Events/QuizTemplate.cshtml")
-
-
-    </div>
-    <div class="row">
-
-
-    <div class="row section-row">
-
-    </div>
-        -->
-    </div>
+     </div>
 
 </section>
 
@@ -127,13 +107,10 @@
 
     <style>
 
-        /* #calendar {
-            width: 50%;
-            max-width: 900px;
-            margin: 0 auto;
-            margin-top: 5%;
-        } */
-
+        .culture-btn {
+            min-height: 40px;
+            height:40px;
+        }
         .event-detail {
             margin-bottom: 20px;
             padding: 10px;
