add sitebar for education

--- a/TP03MainProj/Views/Education/CountryStory/China.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/China.cshtml
@@ -9,7 +9,7 @@
                 <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
                     <div class="row" style="background-size: cover; background-repeat: no-repeat;">
                         <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/cn/new born.png")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img src="@Url.Content("~/Content/Customer/images/study-case-single/main/cn/new born.png")" class="img-resize rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
 
                             <div class="spacer-single" style="background-size: cover; background-repeat: no-repeat;"></div>
                             <div class="col-6 offset-3" style="background-size: cover; background-repeat: no-repeat;">
@@ -28,7 +28,7 @@
                                 </div>
                             </div>
                             <div class="spacer-10" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/cn/1861.png")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img  src="@Url.Content("~/Content/Customer/images/study-case-single/main/cn/1861.png")" class="img-resize rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
     </section>
     <!-- timeline -->
 
-    <section class="timeline">
+    <section class="timeline" id="china-timeline">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
@@ -207,7 +207,7 @@
     </section>
 
     <!-- MigrationStories -->
-    <div class="no-bottom no-top bg-black text-light" id="content" style="background-size: cover; background-repeat: no-repeat;">
+    <div class="no-bottom no-top bg-black text-light" id="china-migration" style="background-size: cover; background-repeat: no-repeat;">
         <div id="top" style="background-size: cover; background-repeat: no-repeat;" class="text-center pb-5  pt-5">
             <h1>Migration Stories</h1>
         </div>
