--- a/TP03MainProj/Views/Education/CountryStory/Korea.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Korea.cshtml
@@ -39,7 +39,7 @@
             </div>
         </div>
     </section>
-    <section class="">
+    <section class="timeline" id="korea-timeline">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
@@ -163,7 +163,7 @@
     </section>
     <!-- MigrationStories -->
 
-    <div class="no-bottom no-top bg-black text-light" id="content" style="background-size: cover; background-repeat: no-repeat;">
+    <div class="no-bottom no-top bg-black text-light" id="korea-migration" style="background-size: cover; background-repeat: no-repeat;">
         <div id="top" style="background-size: cover; background-repeat: no-repeat;" class="text-center pb-5  pt-5">
             <h1>Migration Stories</h1>
         </div>
