--- a/TP03MainProj/Views/Education/Index.cshtml
+++ b/TP03MainProj/Views/Education/Index.cshtml
@@ -52,7 +52,7 @@
                                 <a href="@Url.Action("DiverseCultures", "Education", new { country = "korea" })" class="overlay-btn">Korea</a>
                             </div>
                             <div class="book" id="philippines-img" style="background-image: url('@Url.Content("~/Content/Customer/images/team/Filipino.jpg")');">
-                                <a href="@Url.Action("DiverseCultures", "Education", new { country = "philippines" })" class="overlay-btn">Philippines</a>
+                                <a href="@Url.Action("DiverseCultures", "Education", new { country = "philipines" })" class="overlay-btn">Philippines</a>
                             </div>
                             <div class="book" id="vietnam-img" style="background-image: url('@Url.Content("~/Content/Customer/images/team/Vietnamese.jpg")');">
                                 <a href="@Url.Action("DiverseCultures", "Education", new { country = "vietnam" })" class="overlay-btn">Vietnam</a>
