--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -45,9 +45,9 @@
         <div class="row row-cols-3 justify-content-center m-auto section-row bg-grey border-2 p-2 mt-2 mb-3  border-bottom" id="button-section">
             <div class="col "></div>
             <div class="col text-center">
-                <a class="btn culture-btn btn-primary w-25" href="">Events</a>
-                <a class="btn culture-btn btn-primary w-25" href="">Quiz</a>
-                <a class="btn culture-btn btn-primary w-25" href="">Attraction</a>
+                <a class="btn culture-btn btn-primary text-nowrap w-25" href="">Events</a>
+                <a class="btn culture-btn btn-primary fs-6 w-25" href="">Quiz</a>
+                <a class="btn culture-btn btn-primary fs-6 w-25" href="">Attraction</a>
             </div>
             <div class="col"></div>
         </div>
