--- a/TP03MainProj/Views/Education/CountryStory/Japan.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Japan.cshtml
@@ -40,7 +40,7 @@
             </div>
         </div>
     </section>
-    <section class="">
+    <section class="timeline" id="japan-timeline">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
@@ -140,7 +140,7 @@
     </section>
     <!-- MigrationStories -->
 
-    <div class="no-bottom no-top bg-black text-light" id="content" style="background-size: cover; background-repeat: no-repeat;">
+    <div class="no-bottom no-top bg-black text-light" id="japan-migration" style="background-size: cover; background-repeat: no-repeat;">
         <div id="top" style="background-size: cover; background-repeat: no-repeat;" class="text-center pb-5  pt-5">
             <h1>Migration Stories</h1>
         </div>
